Add backend request diagnostics